Fix overlapping part in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -160,3 +160,7 @@ h4 {
     margin-right: 10px;
 
 }
+
+#fountainCardGroup {
+    margin-bottom: 150px;
+}
